[hw03] update hw03 notebook

--- a/03/frolov_hw3.ipynb
+++ b/03/frolov_hw3.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +172,7 @@
     "    r_c = np.bincount(y, minlength=class_number) - l_c\n",
     "    l_s = r_border_ids.reshape(l_c.shape[0], 1)\n",
     "    r_s = y.shape[0] - l_s\n",
-    "    return l_c.T, l_s.flatten(), r_c.T, r_s.flatten()\n",
+    "    return l_c.T, l_s.view(), r_c.T, r_s.flatten()\n",
     "\n",
     "def get_class_count_slow(y, cut_size=0):\n",
     "    classes = np.unique(y)\n",
@@ -194,7 +194,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y = np.array([0, 1, 2])\n",
+    "# first call to compile\n",
+    "get_class_count2(y);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -392,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 124,
    "metadata": {
     "scrolled": true
    },
@@ -418,7 +429,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Done in 0.002 sec: clf.fit(X_train, y_train)\n"
+      "Done in 0.004 sec: clf.fit(X_train, y_train)\n"
      ]
     },
     {
@@ -432,7 +443,7 @@
        "            splitter='best')"
       ]
      },
-     "execution_count": 175,
+     "execution_count": 124,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -443,23 +454,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Done in 0.034 sec: my_clf.fit(X_train, y_train)\n"
+      "Done in 0.027 sec: my_clf.fit(X_train, y_train)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<__main__.MyDecisionTreeClassifier at 0x7f988492f4e0>"
+       "<__main__.MyDecisionTreeClassifier at 0x7f4386d2b588>"
       ]
      },
-     "execution_count": 176,
+     "execution_count": 125,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -477,16 +488,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.890993265993266"
+       "0.8917748917748917"
       ]
      },
-     "execution_count": 177,
+     "execution_count": 126,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -497,16 +508,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.890993265993266"
+       "0.8917748917748917"
       ]
      },
-     "execution_count": 178,
+     "execution_count": 127,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -524,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -609,14 +620,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Done in 0.129 sec: clf.fit(X_train, y_train)\n"
+      "Done in 0.121 sec: clf.fit(X_train, y_train)\n"
      ]
     },
     {
@@ -630,7 +641,7 @@
        "            splitter='best')"
       ]
      },
-     "execution_count": 163,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -641,23 +652,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Done in 1.434 sec: my_clf.fit(X_train, y_train)\n"
+      "Done in 1.577 sec: my_clf.fit(X_train, y_train)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<__main__.MyDecisionTreeClassifier at 0x7f988492fcc0>"
+       "<__main__.MyDecisionTreeClassifier at 0x7f4386d2b588>"
       ]
      },
-     "execution_count": 157,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -675,16 +686,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.5287952351069569"
+       "0.5238095238095238"
       ]
      },
-     "execution_count": 164,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -695,16 +706,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.5738425644967702"
+       "0.5242566510172144"
       ]
      },
-     "execution_count": 159,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -722,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -731,26 +742,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "int_corr      0.080906\n",
-       "age_f         0.027607\n",
-       "attr2_1       0.027086\n",
-       "age           0.025211\n",
-       "attr1_1_f     0.024801\n",
-       "shar1_1_f     0.024539\n",
-       "intel3_1_f    0.024479\n",
-       "exphappy_f    0.023664\n",
-       "amb3_1_f      0.023652\n",
-       "income_f      0.023235\n",
+       "int_corr      0.084363\n",
+       "sinc2_1       0.035817\n",
+       "fun1_1_f      0.034061\n",
+       "race_f        0.033205\n",
+       "shar2_1_f     0.029968\n",
+       "attr2_1_f     0.024079\n",
+       "amb1_1_f      0.022994\n",
+       "sinc1_1       0.022832\n",
+       "imprace_f     0.022797\n",
+       "exphappy_f    0.022658\n",
        "dtype: float64"
       ]
      },
-     "execution_count": 161,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -763,26 +774,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "date         0.145050\n",
-       "shar1_1      0.135819\n",
-       "age          0.115927\n",
-       "attr3_1      0.104181\n",
-       "go_out       0.048375\n",
-       "amb1_1_f     0.047589\n",
-       "int_corr     0.041690\n",
-       "tuition_f    0.029992\n",
-       "fun2_1_f     0.028648\n",
-       "shar1_1_f    0.020429\n",
+       "date         0.152571\n",
+       "fun1_1_f     0.128383\n",
+       "sinc3_1_f    0.074252\n",
+       "sinc1_1      0.073472\n",
+       "imprace      0.069102\n",
+       "shar1_1      0.051975\n",
+       "age          0.034123\n",
+       "amb2_1       0.028377\n",
+       "shar2_1_f    0.028194\n",
+       "race_f       0.027446\n",
        "dtype: float64"
       ]
      },
-     "execution_count": 162,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -801,35 +812,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'criterion': 'gini', 'max_depth': 30, 'min_samples_leaf': 15}\n",
-      "0.8367091772943236\n",
-      "Done in 101.945 sec\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%xtime\n",
-    "\n",
-    "rfc = RandomForestClassifier(n_jobs=-1, n_estimators=10)\n",
-    "\n",
-    "param_grid = { \n",
-    "    'max_depth': [1,30],\n",
-    "    'min_samples_leaf': range(1,30, 2),\n",
-    "    'criterion': ['gini', 'entropy']\n",
-    "}\n",
-    "\n",
-    "CV = GridSearchCV(estimator=rfc, param_grid=param_grid, cv=5)\n",
-    "CV.fit(X, y)\n",
-    "print(CV.best_params_)\n",
-    "print(CV.best_score_)"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
